--- a/app/components/styles/day-block.css
+++ b/app/components/styles/day-block.css
@@ -1,7 +1,8 @@
 .wrapper {
     position: relative;
-    width: 85px;
-    height: 85px;
+    width: 82px;
+    height: 82px;
+    margin-right: 5px;
     color: skyblue;
     border: 2px solid rgba(100, 205, 255, 0.15);
     background-color: rgba(100, 205, 255, 0.15);
@@ -10,6 +11,10 @@
     user-select: none;
     transition-duration: 450ms;
     cursor: pointer;
+}
+
+.wrapper:last-child {
+    margin-right: 0;
 }
 
 .wrapper:hover {
