--- a/app/containers/styles/month-days.css
+++ b/app/containers/styles/month-days.css
@@ -1,16 +1,18 @@
 .wrapper {
     display: flex;
     flex-direction: column;
-    height: 280px;
     padding: 5px;
     border: 3px solid rgb(50, 50, 50);
     background-color: black;
-    justify-content: space-around;
     z-index: 2;
 }
 
 .row {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    margin-top: 5px;
+}
+
+.row:first-child {
+    margin-top: 0;
 }
