--- a/app/containers/styles/calendar.css
+++ b/app/containers/styles/calendar.css
@@ -9,3 +9,13 @@
     box-shadow: inset 0 0 15px 0 black;
     align-items: center;
 }
+
+.second-wrapper {
+    position: relative;
+    width: 905px;
+    height: 268px;
+    padding: 5px;
+    border: 3px solid rgb(50, 50, 50);
+    background-color: black;
+    z-index: 2;
+}
