--- a/app/components/styles/events-window.css
+++ b/app/components/styles/events-window.css
@@ -1,5 +1,7 @@
 .wrapper {
     position: absolute;
+    display: flex;
+    flex-direction: column;
     top: 5px;
     width: calc(100% - 35px);
     height: calc(100% - 35px);
@@ -7,12 +9,25 @@
     color: skyblue;
     border: 2px solid rgba(100, 205, 255, 0.15);
     background-color: rgba(100, 205, 255, 0.15);
+    overflow-y: scroll;
+}
+
+.wrapper::-webkit-scrollbar {
+    width: 2px;
+}
+
+.wrapper::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+
+.wrapper::-webkit-scrollbar-thumb {
+    background-color: skyblue;
+    outline: 1px solid slategrey;
 }
 
 .close-button {
-    position: absolute;
-    right: 10px;
-    top: 10px;
+    position: fixed;
+    align-self: flex-end;
     width: 32px;
     height: 32px;
     background-color: transparent;
@@ -20,7 +35,6 @@
     outline: none;
     opacity: 0.3;
     cursor: pointer;
-    transition-duration: 450ms;
 }
 .close-button:hover {
     opacity: 1;
@@ -40,12 +54,17 @@
     transform: rotate(-45deg);
 }
 
-.title {
-    margin-bottom: 10px;
+.info {
     padding-right: 60px;
-    font-size: 26px;
+    white-space: pre-wrap;
+}
+
+.info span {
+    display: inline-block;
+    width: 90px;
 }
 
 .description {
-    white-space: pre;
+    margin-top: 10px;
+    white-space: pre-wrap;
 }
