--- a/app/containers/styles/calendar.css
+++ b/app/containers/styles/calendar.css
@@ -13,7 +13,7 @@
 .second-wrapper {
     position: relative;
     width: 905px;
-    height: 268px;
+    /*height: 268px;*/
     padding: 5px;
     border: 3px solid rgb(50, 50, 50);
     background-color: black;
